# text-sat-hab-mmocc

./: .env.example  .gitignore  README.md  pkl_to_img.py  pyproject.toml  validate_cache_08_17.sh
mmocc/: config.py  eval_utils.py  interpretability_utils.py  rs_graft.py  train_utils.py  utils.py
mmocc/analysis/: canopy_figures.ipynb  domain_shift_analysis.ipynb  habitat_covariates_figures.py  occupancy_prediction_demo.ipynb
mmocc/solvers/: logistic.py
mmocc/steps/: 02_filter_data.py  07_fit.py  08_visdiff.py  09_retrieve_expert_descriptions.py  10_ranking_previews.py  11_refit.py  12_explain_habitat_covariates.py  13_canopy_error_analysis.py  14_domain_shift_analysis.py  15_export_publication.py  16_extract_graft_features.py  17_refit_graft.py
mmocc_sat/: config.py  interpretability_utils.py  plot_utils.py  rs_graft.py  rs_utils.py  train_utils.py  utils.py
mmocc_sat/analysis/: domain_shift_analysis.ipynb  habitat_covariates_figures.py
mmocc_sat/steps/: 03_filter_data_manual.ipynb  08_visdiff.py  08_visdiff_cache.py  08_visdiff_data.py  08_visdiff_pull.py  11_refit.py  14_domain_shift_analysis.py  15_export_publication.py  17_refit_graft.py
sat_mmocc/: graft_utils.py  imagery_lookups.py  interpretability_utils.py  rs_graft.py  utils.py
sat_mmocc/analysis/: graft_refit_figures.ipynb  (+14 more)
scripts/: build_sat_images.py  condense_camera_satellite_pairings_v_graft.py  download_naip_images.py  download_naip_images_v_graft.py  download_sentinel_images.py  download_sentinel_images_v_graft.py  format.sh  get_sat.sh  recover_rgb.py  rgb_dt.py  sat_tif_to_png.py
(+49 files in other folders)
